--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/autoprefixer": "^10.2.0",
     "@types/color-convert": "^2.0.0",
+    "@types/copy-webpack-plugin": "^8.0.1",
     "@types/css-minimizer-webpack-plugin": "^3.0.2",
     "@types/draft-js": "^0.11.4",
     "@types/eslint": "^7.2.7",
@@ -93,6 +94,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "autoprefixer": "^10.2.5",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
