--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/mini-css-extract-plugin": "^2.0.1",
     "@types/node": "^16.4.8",
     "@types/node-fetch": "^2.5.8",
+    "@types/node-schedule": "^1.3.2",
     "@types/nodemon": "^1.19.0",
     "@types/pg": "^8.6.1",
     "@types/prettier": "^2.2.2",
@@ -163,8 +164,10 @@
     "lodash": "^4.17.21",
     "luxon": "^2.0.1",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "react-day-picker": "^7.4.10",
     "request": "^2.88.2",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
