--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/prettier": "^2.2.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/react-helmet": "^6.1.4",
     "@types/request": "^2.48.5",
     "@types/request-promise": "^4.1.47",
     "@types/scroll-into-view": "^1.6.7",
@@ -172,6 +173,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react-day-picker": "^7.4.10",
+    "react-helmet": "^6.1.0",
     "request": "^2.88.2",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
