--- a/package.json
+++ b/package.json
@@ -5,8 +5,26 @@
   "author": "Ansel Santosa (ansel@santosa.family)",
   "bugs": "https://github.com/anstosa/ferry.fyi/issues",
   "dependencies": {
+    "auth0": "^2.40.0",
+    "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-sslify": "^1.2.0",
+    "heroku-logger": "^0.3.3",
+    "jsdom": "^19.0.0",
+    "jwks-rsa": "^2.0.5",
+    "luxon": "^2.3.1",
+    "morgan": "^1.10.0",
+    "node-fetch": "v2",
+    "node-schedule": "^2.1.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.17.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
     "@auth0/auth0-react": "^1.9.0",
@@ -79,15 +97,11 @@
     "@typescript-eslint/parser": "^5.13.0",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
-    "auth0": "^2.40.0",
     "autoprefixer": "^10.4.2",
-    "body-parser": "^1.19.2",
     "clsx": "^1.1.1",
     "color-convert": "^2.0.1",
     "colors": "^1.4.0",
-    "compression": "^1.7.4",
     "copy-webpack-plugin": "^10.2.4",
-    "cors": "^2.8.5",
     "css-loader": "^6.7.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "draft-js": "^0.11.7",
@@ -97,35 +111,21 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-webpack-plugin": "^3.1.1",
-    "express": "^4.17.3",
-    "express-jwt": "^6.1.1",
-    "express-oauth2-jwt-bearer": "^1.1.0",
-    "express-sslify": "^1.2.0",
     "favicons": "6",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "framer-motion": "^6.2.8",
-    "heroku-logger": "^0.3.3",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.3",
     "jotai": "^1.6.0",
     "jsbarcode": "^3.11.5",
-    "jsdom": "^19.0.0",
-    "jwks-rsa": "^2.0.5",
-    "lodash": "^4.17.21",
-    "luxon": "^2.3.1",
     "mapbox-gl": "^2.7.0",
     "mini-css-extract-plugin": "^2.6.0",
     "moots-capacitor-dark-mode": "^1.0.2",
-    "morgan": "^1.10.0",
     "ngrok": "^4.3.1",
     "node-env-run": "^4.0.2",
-    "node-fetch": "v2",
-    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.3",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "postcss-scss": "^4.0.3",
@@ -138,11 +138,9 @@
     "react-ga4": "^1.4.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.2",
-    "request": "^2.88.2",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "scroll-into-view": "^1.15.0",
-    "sitemap": "^7.1.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier-scss": "^0.0.1",
@@ -165,8 +163,7 @@
     "webpack-livereload-plugin": "^3.0.1",
     "webpack-node-externals": "^3.0.0",
     "workbox-webpack-plugin": "^6.5.1",
-    "workbox-window": "^6.5.1",
-    "zlib": "^1.0.5"
+    "workbox-window": "^6.5.1"
   },
   "engines": {
     "node": "^16.13.1"
